compiler/testData/diagnostics/tests/ProcessingEmptyImport.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
import<!SYNTAX!><!>

fun firstFun() {}